<resources>
    <string name="app_name">Voyage</string>
    <string name="facebook_app_id">946525895432363</string>
    <string name="google_app_id">433235175305</string>
    <string name="login_activity_title">Log into Voyage</string>
    <string name="sign_up_activity_title">Sign up for Voyage</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_signup">Sign Up</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="invalid_login_credentials_error">Invalid Email or Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="signup_prompt">Don\'t have an account?</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_date_of_birth">Date of Birth</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_blah">BlahActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="label_login_facebook">Continue with Facebook</string>
    <string name="label_sign_up_facebook">Sign Up with Facebook</string>

    <!-- Strings related to trip creation -->
    <string name="label_trip_name">Trip Name</string>
    <string name="label_trip_members_limit">Members Limit</string>
    <string name="label_trip_private">Private</string>
    <string name="section_general">General</string>
    <string name="section_details">Details</string>
    <string name="label_trip_leaving_from">Leaving From</string>
    <string name="label_trip_destination">Destination</string>
    <string name="label_trip_from">From</string>
    <string name="label_trip_to">To</string>
    <string name="label_trip_create_button">Create</string>
    <string name="label_trip_transportation">Transportation</string>
    <string name="title_activity_maps">Map</string>

    <!-- Error and Help messages for create trip activity -->
    <string name="help_trip_private">Only members who you invite will see this trip.</string>
    <string name="help_trip_public">This trip will be visible to all your friends.</string>
    <string name="create_trip_alert_dialog_message">Are you sure you want to discard the changes?</string>
    <string name="error_trip_name">Name must be at least 3 character long</string>
    <string name="error_trip_location">Please enter a valid location</string>

    <string-array name="array_transportation_modes">
        <item>Plane</item>
        <item>Car</item>
        <item>Bus</item>
    </string-array>

    - See more at: http://www.ahotbrew.com/android-dropdown-spinner-example/#sthash.TShO44xy.dpuf
    <string name="title_activity_trip_list">TripListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="intent_key_trip">TRIP_OBJ</string>

    <string name="trip_dates">%1$s  · · · · ·  %2$s</string>
    <string name="trip_locations">%1$s  · · · · ·  %2$s</string>
    <string name="title_activity_add_friends">AddFriendsActivity</string>

    <string name="fb_friend_search_hint">Add friends to trip</string>

    <!-- Overlap dialog error -->
    <string name="error_overlap">
        This trip overlaps with another existing trip: %1$s from %2$s to %3$s. Do you want to continue?
    </string>

    <!-- Deletion alert dialog-->
    <string name="delete_trip_alert">Delete trip?</string>
    <string name="leave_trip_alert">Leave trip?</string>
    <string name="kick_friend_alert">Remove %1$s from %2$s?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_requests_fragment">Requests</string>
    <string name="invitation_message_template">invited you to join %1$s</string>
    <string name="request_message_template">requested to join your trip %1$s</string>
    <string name="label_trip_list_fragment">My Trips</string>
    <string name="snackbar_request_accepted">Request Accepted</string>
    <string name="snackbar_request_declined">Request Declined</string>
    <string name="label_no_requests">No requests as of now. Stay optimistic.</string>
    <string name="snackbar_trip_deleted">Trip Deleted</string>
    <string name="snackbar_trip_left">Trip Left</string>
    <string name="snackbar_trip_created">Trip Created</string>
    <string name="label_members">Members</string>
    <string name="snackbar_member_removed">Member removed</string>
    <string name="edit_trip">edit_trip</string>
    <string name="snackbar_trip_updated">Trip Updated</string>
    <string name="label_invitees">Invitees</string>
    <string name="snackbar_invitee_removed">Invitee Removed</string>
    <string name="snackbar_invitees_added">Invitations sent</string>
    <string name="trip_card_admin">Admin</string>
    <string name="no_trips_label">Create or join a trip to get started!</string>
</resources>
